--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars3.githubusercontent.com/u/20286028?v=3&s=400
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: python0429@gmail.com
   facebook:
   flickr:
   github: Landmaster
